Limpieza de datos

--- a/Proyecto2.ipynb
+++ b/Proyecto2.ipynb
@@ -16,14 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import re\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import WordNetLemmatizer, PorterStemmer"
    ]
   },
   {
@@ -35,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +115,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 31,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +135,7 @@
        "(5572, 2)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +183,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -324,10 +328,220 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "datos = pd.read_csv('spam-proyecto.csv', usecols=[0, 1], skiprows=1, names=['type', 'message'], encoding='latin-1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'before', \"shan't\", 'yourselves', 'below', 'such', 'where', 'now', 'out', 'who', 'being', 'o', 'mustn', 'have', 'of', \"you're\", 'when', 'ma', 'ours', 'from', 'will', 'while', 'only', 'haven', 'yourself', 'if', 'down', \"needn't\", 'you', 'ain', 'which', 'isn', 'at', 'during', \"won't\", 'more', 'be', 'had', 'nor', 's', 'by', 'has', 'he', \"weren't\", \"you'd\", 'further', 'off', 'then', 'we', 'there', 'been', 'didn', 'theirs', 'own', 'what', \"mustn't\", 'wasn', \"should've\", \"hadn't\", 'shouldn', 'just', 'hadn', \"mightn't\", 'some', 'not', 'itself', \"haven't\", 'through', 'yours', 'until', 'with', 'up', 'your', 'her', 'all', 'ourselves', 'so', 'an', 'on', \"doesn't\", 'after', 'very', 'any', 'him', 'our', 'should', 'aren', 'both', 'same', 'is', 'again', 'himself', 'in', \"aren't\", 'it', \"wouldn't\", 're', 'myself', 'am', 'herself', 'll', 'wouldn', 'd', 'did', 'them', 'between', 'was', 'the', 'weren', 'that', 'because', \"isn't\", 'having', 'most', \"it's\", \"you'll\", 'this', 'those', 'i', 'doing', \"hasn't\", 'but', 'don', 'do', \"wasn't\", 'each', 'shan', 'does', 'are', 'and', 'needn', 'about', \"you've\", 'as', 'doesn', 'mightn', 'can', 'too', 've', 'over', 'why', 'its', 'for', 'or', 'into', 'above', \"she's\", 'couldn', 'against', 'to', \"don't\", 'whom', 'these', 'hasn', 'other', 'were', 'me', 'she', \"that'll\", 'few', \"couldn't\", \"didn't\", 'no', 'than', 'they', 'm', 'my', 'here', 'under', 'hers', 'their', 'y', 'won', 't', 'once', 'themselves', \"shouldn't\", 'how', 'his', 'a'}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\50242\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "print(stop_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\50242\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('wordnet')\n",
+    "lemmatizer = WordNetLemmatizer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_message(message):\n",
+    "    # Convertir a minúsculas\n",
+    "    message = message.lower()\n",
+    "\n",
+    "    # Dividir el mensaje en palabras\n",
+    "    words = message.split()\n",
+    "\n",
+    "    # Eliminar signos de puntuación y palabras comunes\n",
+    "    words = [re.sub(r'[^a-zA-Z0-9]', '', word) for word in words if word not in stop_words]\n",
+    "\n",
+    "    # Lematizar las palabras\n",
+    "    words = [lemmatizer.lemmatize(word) for word in words]\n",
+    "\n",
+    "    # Aplicar stemming a las palabras\n",
+    "    words = [stemmer.stem(word) for word in words]\n",
+    "\n",
+    "    # Eliminar palabras entre comillas\n",
+    "    words = [word for word in words if not re.match(r'^\\W+$', word)]\n",
+    "\n",
+    "    # Unir las palabras en un solo mensaje\n",
+    "    processed_message = ' '.join(words)\n",
+    "\n",
+    "    return processed_message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_column(column):\n",
+    "    preprocessed_column = column.apply(preprocess_message)\n",
+    "    column[:] = preprocessed_column.values\n",
+    "    return column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       go jurong point crazi avail bugi n great world...\n",
+       "1                                   ok lar joke wif u oni\n",
+       "2       free entri 2 wkli comp win fa cup final tkt 21...\n",
+       "3                     u dun say earli hor u c alreadi say\n",
+       "4                     nah think go usf life around though\n",
+       "                              ...                        \n",
+       "5567    2nd time tri 2 contact u u 750 pound prize 2 c...\n",
+       "5568                                b go esplanad fr home\n",
+       "5569                              piti mood soani suggest\n",
+       "5570    guy bitch act like id interest buy someth el n...\n",
+       "5571                                       rofl true name\n",
+       "Name: message, Length: 5572, dtype: object"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocess_column(datos['message'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>type</th>\n",
+       "      <th>message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>go jurong point crazi avail bugi n great world...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>ok lar joke wif u oni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>free entri 2 wkli comp win fa cup final tkt 21...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>u dun say earli hor u c alreadi say</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>nah think go usf life around though</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   type                                            message\n",
+       "0   ham  go jurong point crazi avail bugi n great world...\n",
+       "1   ham                              ok lar joke wif u oni\n",
+       "2  spam  free entri 2 wkli comp win fa cup final tkt 21...\n",
+       "3   ham                u dun say earli hor u c alreadi say\n",
+       "4   ham                nah think go usf life around though"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "datos.head()"
+   ]
   }
  ],
  "metadata": {
