Modelo de probabilidades

--- a/Proyecto2.ipynb
+++ b/Proyecto2.ipynb
@@ -542,6 +542,142 @@
    "source": [
     "datos.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_probabilities(datos, word):\n",
+    "    # Calcular P(S)\n",
+    "    p_spam = datos[datos['type'] == 'spam'].shape[0] / datos.shape[0]\n",
+    "\n",
+    "    # Calcular P(H)\n",
+    "    p_ham = 1 - p_spam\n",
+    "\n",
+    "    # Calcular P(W|S)\n",
+    "    spam_messages = datos[datos['type'] == 'spam']['message']\n",
+    "    spam_word_count = sum(spam_messages.str.split().apply(lambda x: word in x))\n",
+    "    total_spam_messages = spam_messages.shape[0]\n",
+    "    p_w_given_spam = spam_word_count / total_spam_messages\n",
+    "\n",
+    "    # Calcular P(W|H): \n",
+    "    ham_messages = datos[datos['type'] == 'ham']['message']\n",
+    "    ham_word_count = sum(ham_messages.str.split().apply(lambda x: word in x))\n",
+    "    total_ham_messages = ham_messages.shape[0]\n",
+    "    p_w_given_ham = ham_word_count / total_ham_messages\n",
+    "\n",
+    "    return p_spam, p_ham, p_w_given_spam, p_w_given_ham"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_probability_word(word, p_spam, p_ham, p_w_given_spam, p_w_given_ham):\n",
+    "    # Calcular P(S|W)\n",
+    "    p_spam_given_word = (p_w_given_spam * p_spam) / ((p_w_given_spam * p_spam) + (p_w_given_ham * p_ham))\n",
+    "\n",
+    "    # Calcular P(H|W)\n",
+    "    p_ham_given_word = 1 - p_spam_given_word\n",
+    "\n",
+    "    return p_spam_given_word, p_ham_given_word"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidad de que un texto sea SPAM dado que contiene la palabra \"free\": 0.7410714285714286\n",
+      "Probabilidad de que un texto sea HAM dado que contiene la palabra \"free\": 0.2589285714285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'free'\n",
+    "p_spam, p_ham, p_w_given_spam, p_w_given_ham = calculate_probabilities(datos, word)\n",
+    "p_spam_given_word, p_ham_given_word = calculate_probability_word(word, p_spam, p_ham, p_w_given_spam, p_w_given_ham)\n",
+    "print(f'Probabilidad de que un texto sea SPAM dado que contiene la palabra \"{word}\": {p_spam_given_word}')\n",
+    "print(f'Probabilidad de que un texto sea HAM dado que contiene la palabra \"{word}\": {p_ham_given_word}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calculate_probability_words(word_list, datos):\n",
+    "    # Obtener la cantidad de correos SPAM y HAM\n",
+    "    total_spam_messages = datos[datos['type'] == 'spam'].shape[0]\n",
+    "    total_ham_messages = datos[datos['type'] == 'ham'].shape[0]\n",
+    "\n",
+    "    # Inicializar las probabilidades de cada palabra\n",
+    "    p_words_spam = []\n",
+    "    p_words_ham = []\n",
+    "\n",
+    "    # Calcular la probabilidad de cada palabra\n",
+    "    for word in word_list:\n",
+    "        # Contar la cantidad de correos SPAM y HAM que contienen la palabra\n",
+    "        spam_word_count = datos[datos['type'] == 'spam']['message'].str.contains(word).sum()\n",
+    "        ham_word_count = datos[datos['type'] == 'ham']['message'].str.contains(word).sum()\n",
+    "\n",
+    "        # Calcular la probabilidad de la palabra\n",
+    "        p_word_spam = spam_word_count / total_spam_messages\n",
+    "        p_word_ham = ham_word_count / total_ham_messages\n",
+    "\n",
+    "        p_words_spam.append(p_word_spam)\n",
+    "        p_words_ham.append(p_word_ham)\n",
+    "\n",
+    "    # Calcular la probabilidad de que un texto sea SPAM dado que contiene las palabras\n",
+    "    p_spam_given_words = 1\n",
+    "    p_ham_given_words = 1\n",
+    "    for p_word_spam, p_word_ham in zip(p_words_spam, p_words_ham):\n",
+    "        p_spam_given_words *= p_word_spam\n",
+    "        p_ham_given_words *= p_word_ham\n",
+    "\n",
+    "    p_spam_given_words /= (p_spam_given_words + p_ham_given_words)\n",
+    "    p_ham_given_words = 1 - p_spam_given_words\n",
+    "\n",
+    "    return p_spam_given_words, p_ham_given_words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probabilidad de que un texto sea SPAM dado que contiene las palabras ['free', 'win', 'offer']: 0.9998578506039549\n",
+      "Probabilidad de que un texto sea HAM dado que contiene las palabras ['free', 'win', 'offer']: 0.00014214939604506593\n"
+     ]
+    }
+   ],
+   "source": [
+    "word_list = ['free', 'win', 'offer']\n",
+    "#word_list = ['thank', 'good', 'great']\n",
+    "p_spam_given_words, p_ham_given_words = calculate_probability_words(word_list, datos)\n",
+    "print(f'Probabilidad de que un texto sea SPAM dado que contiene las palabras {word_list}: {p_spam_given_words}')\n",
+    "print(f'Probabilidad de que un texto sea HAM dado que contiene las palabras {word_list}: {p_ham_given_words}')"
+   ]
   }
  ],
  "metadata": {
