--- a/Proyecto2.ipynb
+++ b/Proyecto2.ipynb
@@ -664,24 +664,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidad de que un texto sea SPAM dado que contiene las palabras ['free', 'win', 'offer']: 0.9998578506039549\n",
-      "Probabilidad de que un texto sea HAM dado que contiene las palabras ['free', 'win', 'offer']: 0.00014214939604506593\n"
+      "Probabilidad de que un texto sea SPAM dado que contiene las palabras \"free win offer\": 0.9998578506039549\n",
+      "Probabilidad de que un texto sea HAM dado que contiene las palabras \"free win offer\": 0.00014214939604506593\n"
      ]
     }
    ],
    "source": [
-    "word_list = ['free', 'win', 'offer']\n",
+    "#word_list = ['free', 'win', 'offer']\n",
     "#word_list = ['thank', 'good', 'great']\n",
+    "message = 'free win offer'\n",
+    "word_list = message.split()\n",
     "p_spam_given_words, p_ham_given_words = calculate_probability_words(word_list, datos)\n",
-    "print(f'Probabilidad de que un texto sea SPAM dado que contiene las palabras {word_list}: {p_spam_given_words}')\n",
-    "print(f'Probabilidad de que un texto sea HAM dado que contiene las palabras {word_list}: {p_ham_given_words}')"
+    "print(f'Probabilidad de que un texto sea SPAM dado que contiene las palabras \"{message}\": {p_spam_given_words}')\n",
+    "print(f'Probabilidad de que un texto sea HAM dado que contiene las palabras \"{message}\": {p_ham_given_words}')"
    ]
   },
   {
