--- a/Proyecto2.ipynb
+++ b/Proyecto2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
        "4   ham  Nah I don't think he goes to usf, he lives aro..."
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "(5572, 2)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'wasn', 'shan', 'below', 'some', 'does', 'by', 'up', 'it', 'they', 'with', 'my', 'no', 'doesn', 'nor', 'a', 'won', 'herself', 'above', 'when', 'to', 'weren', 'the', 'ma', 'your', 'why', 'this', 've', 'very', 'were', \"mightn't\", 'and', 'both', 'between', 'don', 'mustn', 'its', 'she', 'just', 'here', 'that', 'while', 'other', 'themselves', 'should', 'those', 'because', \"doesn't\", 'more', 'from', 'be', 'off', 'all', \"you'd\", 'me', \"you'll\", 'we', \"you're\", 'ours', 'yourselves', 'own', 'such', 'hadn', 'our', \"shouldn't\", 'ain', 'doing', 'out', \"won't\", \"should've\", 'same', 'did', 'which', 'at', \"shan't\", 'during', \"she's\", 'not', \"couldn't\", \"wouldn't\", 'only', 'against', \"isn't\", 'about', \"hadn't\", 'him', \"hasn't\", 'before', \"that'll\", 'whom', 'these', 'didn', 'as', 'his', 'm', 'but', 'than', 't', 'd', 'had', 'after', 'few', 'in', 'further', \"weren't\", \"you've\", 'o', 'he', \"didn't\", 'will', 'mightn', 'is', 'what', 'hasn', 's', 'too', 'himself', 'do', 'ourselves', \"aren't\", \"mustn't\", 'most', 'myself', 'haven', 'her', 'having', 'being', 'couldn', 'an', 'theirs', 'can', \"needn't\", 'them', 'each', 'if', 'so', 'there', 'or', 'itself', 'into', 'where', 'you', 're', 'll', 'through', 'down', 'yourself', 'has', 'now', 'needn', 'of', 'shouldn', 'hers', \"haven't\", \"it's\", 'under', 'been', 'once', 'am', 'are', 'was', 'aren', 'for', 'y', \"wasn't\", 'how', \"don't\", 'i', 'have', 'wouldn', 'again', 'then', 'who', 'over', 'their', 'yours', 'isn', 'until', 'any', 'on'}\n"
+      "{'didn', 'than', \"shouldn't\", 've', \"aren't\", 'if', 'as', 'am', 'has', 'through', 'how', 'they', 'your', 'o', 'which', 'no', 'he', 'over', \"wasn't\", 'having', 'hasn', 'did', 'why', 'a', 'not', 'where', 'from', 'her', 'again', 'have', 'be', 'by', \"haven't\", \"mustn't\", 'into', 'shouldn', 'on', 'up', 'those', 'aren', 'them', 'isn', 'don', 'd', \"you'll\", 'more', 'my', 'weren', 'below', \"hadn't\", 'here', 'just', 'that', 'do', \"couldn't\", 'all', 'mustn', 'under', 'you', 'shan', \"weren't\", 'off', 'is', 'she', 'down', 'few', 'ours', 'll', 'out', 'further', 'was', 'whom', 'too', 'being', 'what', 'the', \"hasn't\", 'these', 'wouldn', 'myself', 'very', 'm', 'herself', 'of', 'i', \"didn't\", 'about', 'now', 'doesn', 'hers', 'each', 'hadn', 'should', 'when', 'doing', \"won't\", 's', 'in', 're', \"you've\", 'there', 'above', 'himself', 'theirs', 'against', 'to', 'we', \"wouldn't\", 'our', \"you'd\", \"she's\", 'yourself', 'most', 'me', \"you're\", 'and', 'it', 'until', 'once', 'y', 'own', 'so', \"needn't\", \"that'll\", \"should've\", 'yours', 'couldn', 'mightn', 'because', 'wasn', 'their', 'but', 'themselves', \"isn't\", 'does', 'other', 'won', 'for', 'needn', 'between', 'only', 'this', 'nor', 'been', 'had', 'with', 'are', 'ain', 'can', 'its', \"it's\", 'ourselves', 'while', 'during', 'before', 'some', 'will', 'yourselves', 'him', 'both', \"doesn't\", 'same', 'who', 'after', 'ma', 'his', 't', 'itself', 'then', \"mightn't\", \"shan't\", 'haven', 'any', 'at', 'an', 'were', 'or', 'such', \"don't\"}\n"
      ]
     },
     {
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
        "Name: message, Length: 5572, dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "4   ham                nah think go usf life around though"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,20 +602,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidad de que un texto sea SPAM dado que contiene la palabra \"free\": 0.7410714285714286\n",
-      "Probabilidad de que un texto sea HAM dado que contiene la palabra \"free\": 0.2589285714285714\n"
+      "Probabilidad de que un texto sea SPAM dado que contiene la palabra \"content\": 0.7222222222222222\n",
+      "Probabilidad de que un texto sea HAM dado que contiene la palabra \"content\": 0.2777777777777778\n"
      ]
     }
    ],
    "source": [
-    "word = 'free'\n",
+    "word = 'content'\n",
     "p_spam, p_ham, p_w_given_spam, p_w_given_ham = calculate_probabilities(datos, word)\n",
     "p_spam_given_word, p_ham_given_word = calculate_probability_word(word, p_spam, p_ham, p_w_given_spam, p_w_given_ham)\n",
     "print(f'Probabilidad de que un texto sea SPAM dado que contiene la palabra \"{word}\": {p_spam_given_word}')\n",
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,11 +635,21 @@
     "\n",
     "    p_words_spam = []\n",
     "    p_words_ham = []\n",
+    "    processed_word_list = []\n",
+    "    spam_word_list = []\n",
     "\n",
     "    for word in word_list:\n",
     "        # Contar la cantidad SPAM y HAM que contienen la palabra\n",
     "        spam_word_count = datos[datos['type'] == 'spam']['message'].str.contains(word).sum()\n",
     "        ham_word_count = datos[datos['type'] == 'ham']['message'].str.contains(word).sum()\n",
+    "\n",
+    "        if spam_word_count == 0 and ham_word_count == 0:\n",
+    "            continue\n",
+    "\n",
+    "        processed_word_list.append(word)\n",
+    "\n",
+    "        if spam_word_count > ham_word_count:\n",
+    "            spam_word_list.append(word)\n",
     "\n",
     "        # Calcular P(W|S) y P(W|H)\n",
     "        p_word_spam = spam_word_count / total_spam_messages\n",
@@ -656,30 +666,36 @@
     "        p_ham_given_words *= p_word_ham\n",
     "\n",
     "    # Normalizar utilizando el teorema de Bayes\n",
-    "    p_spam_given_words /= (p_spam_given_words + p_ham_given_words)\n",
+    "    p_spam_given_words /= (p_spam_given_words + p_ham_given_words + 1e-10)\n",
     "    p_ham_given_words = 1 - p_spam_given_words\n",
+    "\n",
+    "    print(f'Palabras procesadas: {processed_word_list}')\n",
+    "    print(f'Palabras que favorecen SPAM: {spam_word_list}')\n",
     "\n",
     "    return p_spam_given_words, p_ham_given_words"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Probabilidad de que un texto sea SPAM dado que contiene las palabras \"free win offer\": 0.9998578506039549\n",
-      "Probabilidad de que un texto sea HAM dado que contiene las palabras \"free win offer\": 0.00014214939604506593\n"
+      "Palabras procesadas: ['oh', 'god...', 'taken', 'the', 'teeth?', 'is', 'it']\n",
+      "Palabras que favorecen SPAM: []\n",
+      "Probabilidad de que un texto sea SPAM dado que contiene las palabras \"oh god... taken the teeth? is it paining\": 0.0\n",
+      "Probabilidad de que un texto sea HAM dado que contiene las palabras \"oh god... taken the teeth? is it paining\": 1.0\n"
      ]
     }
    ],
    "source": [
     "#word_list = ['free', 'win', 'offer']\n",
     "#word_list = ['thank', 'good', 'great']\n",
-    "message = 'free win offer'\n",
+    "#message = 'reminder You have not downloaded the content you have already paid for'\n",
+    "message = 'oh god... taken the teeth? is it paining'\n",
     "word_list = message.split()\n",
     "p_spam_given_words, p_ham_given_words = calculate_probability_words(word_list, datos)\n",
     "print(f'Probabilidad de que un texto sea SPAM dado que contiene las palabras \"{message}\": {p_spam_given_words}')\n",
@@ -695,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1139,7 @@
        "                ('multinomialnb', MultinomialNB())])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1144,7 +1160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1166,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
